cfn_benchmark/cfn_templates/Tianyi2__IRIS/data/cloudformation_collected_templates_new/template_09521_325170705.yaml
Resources:
  EcsVpcCEF3634B:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: FargateServiceStack/EcsVpc
    Metadata:
      aws:cdk:path: FargateServiceStack/EcsVpc/Resource
  EcsVpcPublicSubnet1Subnet4FC26CFD:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.0.0/18
      VpcId:
        Ref: EcsVpcCEF3634B
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: true
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Public
        - Key: aws-cdk:subnet-type
          Value: Public
        - Key: Name
          Value: FargateServiceStack/EcsVpc/PublicSubnet1
    Metadata:
      aws:cdk:path: FargateServiceStack/EcsVpc/PublicSubnet1/Subnet
  EcsVpcPublicSubnet1RouteTable3F836709:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: EcsVpcCEF3634B
      Tags:
        - Key: Name
          Value: FargateServiceStack/EcsVpc/PublicSubnet1
    Metadata:
      aws:cdk:path: FargateServiceStack/EcsVpc/PublicSubnet1/RouteTable
  EcsVpcPublicSubnet1RouteTableAssociation27B0B1F1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: EcsVpcPublicSubnet1RouteTable3F836709
      SubnetId:
        Ref: EcsVpcPublicSubnet1Subnet4FC26CFD
    Metadata:
      aws:cdk:path: FargateServiceStack/EcsVpc/PublicSubnet1/RouteTableAssociation
  EcsVpcPublicSubnet1DefaultRoute29B4D851:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: EcsVpcPublicSubnet1RouteTable3F836709
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: EcsVpcIGWF80402C4
    DependsOn:
      - EcsVpcVPCGWE2526015
    Metadata:
      aws:cdk:path: FargateServiceStack/EcsVpc/PublicSubnet1/DefaultRoute
  EcsVpcPublicSubnet1EIP97CC60E8:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: FargateServiceStack/EcsVpc/PublicSubnet1
    Metadata:
      aws:cdk:path: FargateServiceStack/EcsVpc/PublicSubnet1/EIP
  EcsVpcPublicSubnet1NATGateway84F4640B:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId:
        Fn::GetAtt:
          - EcsVpcPublicSubnet1EIP97CC60E8
          - AllocationId
      SubnetId:
        Ref: EcsVpcPublicSubnet1Subnet4FC26CFD
      Tags:
        - Key: Name
          Value: FargateServiceStack/EcsVpc/PublicSubnet1
    Metadata:
      aws:cdk:path: FargateServiceStack/EcsVpc/PublicSubnet1/NATGateway
  EcsVpcPublicSubnet2Subnet127B1F4A:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.64.0/18
      VpcId:
        Ref: EcsVpcCEF3634B
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: true
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Public
        - Key: aws-cdk:subnet-type
          Value: Public
        - Key: Name
          Value: FargateServiceStack/EcsVpc/PublicSubnet2
    Metadata:
      aws:cdk:path: FargateServiceStack/EcsVpc/PublicSubnet2/Subnet
  EcsVpcPublicSubnet2RouteTable259A8B2D:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: EcsVpcCEF3634B
      Tags:
        - Key: Name
          Value: FargateServiceStack/EcsVpc/PublicSubnet2
    Metadata:
      aws:cdk:path: FargateServiceStack/EcsVpc/PublicSubnet2/RouteTable
  EcsVpcPublicSubnet2RouteTableAssociation6449DB9B:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: EcsVpcPublicSubnet2RouteTable259A8B2D
      SubnetId:
        Ref: EcsVpcPublicSubnet2Subnet127B1F4A
    Metadata:
      aws:cdk:path: FargateServiceStack/EcsVpc/PublicSubnet2/RouteTableAssociation
  EcsVpcPublicSubnet2DefaultRouteD785541D:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: EcsVpcPublicSubnet2RouteTable259A8B2D
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: EcsVpcIGWF80402C4
    DependsOn:
      - EcsVpcVPCGWE2526015
    Metadata:
      aws:cdk:path: FargateServiceStack/EcsVpc/PublicSubnet2/DefaultRoute
  EcsVpcPublicSubnet2EIP9B6C83AE:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: FargateServiceStack/EcsVpc/PublicSubnet2
    Metadata:
      aws:cdk:path: FargateServiceStack/EcsVpc/PublicSubnet2/EIP
  EcsVpcPublicSubnet2NATGatewayDFAD96D0:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId:
        Fn::GetAtt:
          - EcsVpcPublicSubnet2EIP9B6C83AE
          - AllocationId
      SubnetId:
        Ref: EcsVpcPublicSubnet2Subnet127B1F4A
      Tags:
        - Key: Name
          Value: FargateServiceStack/EcsVpc/PublicSubnet2
    Metadata:
      aws:cdk:path: FargateServiceStack/EcsVpc/PublicSubnet2/NATGateway
  EcsVpcPrivateSubnet1SubnetDE1C6717:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.128.0/18
      VpcId:
        Ref: EcsVpcCEF3634B
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Private
        - Key: aws-cdk:subnet-type
          Value: Private
        - Key: Name
          Value: FargateServiceStack/EcsVpc/PrivateSubnet1
    Metadata:
      aws:cdk:path: FargateServiceStack/EcsVpc/PrivateSubnet1/Subnet
  EcsVpcPrivateSubnet1RouteTable44D603B2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: EcsVpcCEF3634B
      Tags:
        - Key: Name
          Value: FargateServiceStack/EcsVpc/PrivateSubnet1
    Metadata:
      aws:cdk:path: FargateServiceStack/EcsVpc/PrivateSubnet1/RouteTable
  EcsVpcPrivateSubnet1RouteTableAssociationA072EBC4:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: EcsVpcPrivateSubnet1RouteTable44D603B2
      SubnetId:
        Ref: EcsVpcPrivateSubnet1SubnetDE1C6717
    Metadata:
      aws:cdk:path: FargateServiceStack/EcsVpc/PrivateSubnet1/RouteTableAssociation
  EcsVpcPrivateSubnet1DefaultRoute523B7F1A:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: EcsVpcPrivateSubnet1RouteTable44D603B2
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: EcsVpcPublicSubnet1NATGateway84F4640B
    Metadata:
      aws:cdk:path: FargateServiceStack/EcsVpc/PrivateSubnet1/DefaultRoute
  EcsVpcPrivateSubnet2Subnet4E5EDAB1:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.192.0/18
      VpcId:
        Ref: EcsVpcCEF3634B
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Private
        - Key: aws-cdk:subnet-type
          Value: Private
        - Key: Name
          Value: FargateServiceStack/EcsVpc/PrivateSubnet2
    Metadata:
      aws:cdk:path: FargateServiceStack/EcsVpc/PrivateSubnet2/Subnet
  EcsVpcPrivateSubnet2RouteTable1CB3B77F:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: EcsVpcCEF3634B
      Tags:
        - Key: Name
          Value: FargateServiceStack/EcsVpc/PrivateSubnet2
    Metadata:
      aws:cdk:path: FargateServiceStack/EcsVpc/PrivateSubnet2/RouteTable
  EcsVpcPrivateSubnet2RouteTableAssociation136FEFD9:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: EcsVpcPrivateSubnet2RouteTable1CB3B77F
      SubnetId:
        Ref: EcsVpcPrivateSubnet2Subnet4E5EDAB1
    Metadata:
      aws:cdk:path: FargateServiceStack/EcsVpc/PrivateSubnet2/RouteTableAssociation
  EcsVpcPrivateSubnet2DefaultRoute1D92C4ED:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: EcsVpcPrivateSubnet2RouteTable1CB3B77F
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: EcsVpcPublicSubnet2NATGatewayDFAD96D0
    Metadata:
      aws:cdk:path: FargateServiceStack/EcsVpc/PrivateSubnet2/DefaultRoute
  EcsVpcIGWF80402C4:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: FargateServiceStack/EcsVpc
    Metadata:
      aws:cdk:path: FargateServiceStack/EcsVpc/IGW
  EcsVpcVPCGWE2526015:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: EcsVpcCEF3634B
      InternetGatewayId:
        Ref: EcsVpcIGWF80402C4
    Metadata:
      aws:cdk:path: FargateServiceStack/EcsVpc/VPCGW
  TestClusterE0095054:
    Type: AWS::ECS::Cluster
    Properties:
      ClusterName: go-service-cluster
      ClusterSettings:
        - Name: containerInsights
          Value: disabled
    Metadata:
      aws:cdk:path: FargateServiceStack/TestCluster/Resource
  FargateLogGroupA4B4CA79:
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: /ecs/go-service
      RetentionInDays: 731
    UpdateReplacePolicy: Retain
    DeletionPolicy: Retain
    Metadata:
      aws:cdk:path: FargateServiceStack/FargateLogGroup/Resource
  MyTaskTaskRole560858C4:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
        Version: "2012-10-17"
    Metadata:
      aws:cdk:path: FargateServiceStack/MyTask/TaskRole/Resource
  MyTaskTaskRoleDefaultPolicyE727E75A:
    Type: AWS::IAM::Policy
    Properties:
      PolicyDocument:
        Statement:
          - Action: s3:ListAllMyBuckets
            Effect: Allow
            Resource: arn:aws:s3:::*
        Version: "2012-10-17"
      PolicyName: MyTaskTaskRoleDefaultPolicyE727E75A
      Roles:
        - Ref: MyTaskTaskRole560858C4
    Metadata:
      aws:cdk:path: FargateServiceStack/MyTask/TaskRole/DefaultPolicy/Resource
  MyTaskF5748B4B:
    Type: AWS::ECS::TaskDefinition
    Properties:
      ContainerDefinitions:
        - Environment:
            - Name: PARAM1
              Value: test1
          Essential: true
          Image:
            Fn::Join:
              - ""
              - - Ref: AWS::AccountId
                - .dkr.ecr.
                - Ref: AWS::Region
                - "."
                - Ref: AWS::URLSuffix
                - /aws-cdk/assets:31a8aca0b0c7498ae8bbac5ca0fe7c76cb0a9d4e8c57b626eb61fc706d3e6c40
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group:
                Ref: FargateLogGroupA4B4CA79
              awslogs-stream-prefix: go-service
              awslogs-region:
                Ref: AWS::Region
          Name: MyContainer
      Cpu: "512"
      ExecutionRoleArn:
        Fn::GetAtt:
          - MyTaskExecutionRoleD2FEFCB2
          - Arn
      Family: FargateServiceStackMyTask08E53599
      Memory: "1024"
      NetworkMode: awsvpc
      RequiresCompatibilities:
        - FARGATE
      TaskRoleArn:
        Fn::GetAtt:
          - MyTaskTaskRole560858C4
          - Arn
    Metadata:
      aws:cdk:path: FargateServiceStack/MyTask/Resource
  MyTaskExecutionRoleD2FEFCB2:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
        Version: "2012-10-17"
    Metadata:
      aws:cdk:path: FargateServiceStack/MyTask/ExecutionRole/Resource
  MyTaskExecutionRoleDefaultPolicy8A6B211B:
    Type: AWS::IAM::Policy
    Properties:
      PolicyDocument:
        Statement:
          - Action:
              - ecr:BatchCheckLayerAvailability
              - ecr:GetDownloadUrlForLayer
              - ecr:BatchGetImage
            Effect: Allow
            Resource:
              Fn::Join:
                - ""
                - - "arn:"
                  - Ref: AWS::Partition
                  - ":ecr:"
                  - Ref: AWS::Region
                  - ":"
                  - Ref: AWS::AccountId
                  - :repository/aws-cdk/assets
          - Action: ecr:GetAuthorizationToken
            Effect: Allow
            Resource: "*"
          - Action:
              - logs:CreateLogStream
              - logs:PutLogEvents
            Effect: Allow
            Resource:
              Fn::GetAtt:
                - FargateLogGroupA4B4CA79
                - Arn
        Version: "2012-10-17"
      PolicyName: MyTaskExecutionRoleDefaultPolicy8A6B211B
      Roles:
        - Ref: MyTaskExecutionRoleD2FEFCB2
    Metadata:
      aws:cdk:path: FargateServiceStack/MyTask/ExecutionRole/DefaultPolicy/Resource
  MyServiceB4132EDA:
    Type: AWS::ECS::Service
    Properties:
      Cluster:
        Ref: TestClusterE0095054
      DeploymentConfiguration:
        MaximumPercent: 200
        MinimumHealthyPercent: 50
      DesiredCount: 1
      EnableECSManagedTags: false
      LaunchType: FARGATE
      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: DISABLED
          SecurityGroups:
            - Fn::GetAtt:
                - MyServiceSecurityGroup6281A313
                - GroupId
          Subnets:
            - Ref: EcsVpcPrivateSubnet1SubnetDE1C6717
            - Ref: EcsVpcPrivateSubnet2Subnet4E5EDAB1
      PlatformVersion: 1.4.0
      ServiceName: go-fargate-service
      TaskDefinition:
        Ref: MyTaskF5748B4B
    Metadata:
      aws:cdk:path: FargateServiceStack/MyService/Service
  MyServiceSecurityGroup6281A313:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: FargateServiceStack/MyService/SecurityGroup
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      VpcId:
        Ref: EcsVpcCEF3634B
    Metadata:
      aws:cdk:path: FargateServiceStack/MyService/SecurityGroup/Resource
  CDKMetadata:
    Type: AWS::CDK::Metadata
    Properties:
      Modules: aws-cdk=2.113.0,@aws-cdk/assets=1.80.0,@aws-cdk/aws-applicationautoscaling=1.80.0,@aws-cdk/aws-autoscaling=1.80.0,@aws-cdk/aws-autoscaling-common=1.80.0,@aws-cdk/aws-autoscaling-hooktargets=1.80.0,@aws-cdk/aws-cloudwatch=1.80.0,@aws-cdk/aws-codeguruprofiler=1.80.0,@aws-cdk/aws-ec2=1.80.0,@aws-cdk/aws-ecr=1.80.0,@aws-cdk/aws-ecr-assets=1.80.0,@aws-cdk/aws-ecs=1.80.0,@aws-cdk/aws-elasticloadbalancingv2=1.80.0,@aws-cdk/aws-events=1.80.0,@aws-cdk/aws-iam=1.80.0,@aws-cdk/aws-kms=1.80.0 [...]
    Metadata:
      aws:cdk:path: FargateServiceStack/CDKMetadata/Default
    Condition: CDKMetadataAvailable
Conditions:
  CDKMetadataAvailable:
    Fn::Or:
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-northeast-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-northeast-2
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-southeast-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-southeast-2
          - Fn::Equals:
              - Ref: AWS::Region
              - ca-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - cn-north-1
          - Fn::Equals:
              - Ref: AWS::Region
              - cn-northwest-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-central-1
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-north-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-2
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-3
          - Fn::Equals:
              - Ref: AWS::Region
              - me-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - sa-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-east-2
          - Fn::Equals:
              - Ref: AWS::Region
              - us-west-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-west-2
